crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_compact.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 437
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
 AgentWatch   repo:routa-js  branch:main    FILES VIEW · FOLLOW ON  rpc:socket  ag:2 act:1  dirt
┌Files─────────────────────────────────────────────────────────────────────────────────────────┐
│ ALL FILES    REVIEW UNKNOWN                                                                  │
│2 files  M:1 D:1  E:1 I:0 U:1                                                                 │
│──────────────────────────────────────────────────────────────────────────────────────────────│
│> tui.rs                                                                                      │
│  ...gentwatch/src  M  +38 -5     4m                                                          │
│  route.ts                                                                                    │
│  .../api/a2a/card  D  -12        5m                                                          │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────────────────────────────┐
│tui.rs                                                                                        │
│crates/agentwatch/src                                                                         │
│Last by: impl-buddy                                                                           │
│Modified: 4m                                                                                  │
│Lines: ...  Size: ...  Git changes: ...                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓ select  u unknown  d preview  Pg scroll  q quit
