crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_summary.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 400
expression: "render_snapshot(&state, &mut cache, 120, 28)"
---
 AgentWatch   repo:routa-js  branch:main    FILES VIEW · FOLLOW ON  rpc:socket  ag:2 act:1  dirty:2  unknown:1  synced 2
┌Files───────────────────────────────────────────────────────────────────────────────┐┌Details─────────────────────────┐
│ ALL FILES    REVIEW UNKNOWN                                                        ││tui.rs                          │
│2 files  M:1 D:1  E:1 I:0 U:1                                                       ││crates/agentwatch/src           │
│────────────────────────────────────────────────────────────────────────────────────││Last by: impl-buddy             │
│> tui.rs                                               ...tch/src  M  +38 -5     4m ││Modified: 4m                    │
│  route.ts                                             ...2a/card  D  -12        5m ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
